moving sound effect

--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,7 @@
 	<classpathentry kind="lib" path="libs/jars/slick.jar"/>
 	<classpathentry kind="lib" path="libs/jars/jinput.jar"/>
 	<classpathentry kind="lib" path="libs/jars/lzma.jar"/>
+	<classpathentry kind="lib" path="libs/jars/jogg-0.0.7.jar"/>
+	<classpathentry kind="lib" path="libs/jars/jorbis-0.0.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
